fix: fancy anchor implementation didn't support wrapping texts

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -7,6 +7,7 @@
   --color-text: #161e2e;
   --color-subtitle: #6b7280;
   --color-link: #047481;
+  --color-link-highlight: rgba(4, 116, 129, 0.25);
   --color-scrollbar: #cacaca;
   
   --shadow-md: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
@@ -24,6 +25,7 @@
     --color-text: #efefef;
     --color-subtitle: #d9d9d9;
     --color-link: #54b4c1;
+    --color-link-highlight: rgba(84, 180, 193, 0.25);
     --color-scrollbar: #3d445c;
     
     --shadow-md: 0 4px 6px -1px rgba(255, 255, 255, 0.1), 0 2px 4px -1px rgba(255, 255, 255, 0.06);
@@ -48,6 +50,7 @@
   --color-text: #161e2e;
   --color-subtitle: #6b7280;
   --color-link: #047481;
+  --color-link-highlight: rgba(4, 116, 129, 0.25);
   --color-scrollbar: #cacaca;
   
   --shadow-md: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
@@ -64,6 +67,7 @@
   --color-text: #efefef;
   --color-subtitle: #d9d9d9;
   --color-link: #54b4c1;
+  --color-link-highlight: rgba(84, 180, 193, 0.25);
   --color-scrollbar: #3d445c;
 
   --shadow-md: 0 4px 6px -1px rgba(255, 255, 255, 0.1), 0 2px 4px -1px rgba(255, 255, 255, 0.06);
@@ -89,29 +93,18 @@ body {
   position: relative;
   color: var(--color-link);
   transition: 200ms cubic-bezier(0, .8, .13, 1);
-}
 
+  box-shadow:
+    inset 0 0em transparent,
+    inset 0 -0.1em var(--color-link);
+  }
+  
 .fancy-anchor:hover {
   color: var(--color-text);
-}
-
-.fancy-anchor:after {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  top: 95%;
-  left: -0.1em;
-  right: -0.1em;
-  bottom: 0;
-  transition: 200ms cubic-bezier(0, .8, .13, 1);
-  background-color: var(--color-link);
-  opacity: 1;
-  border-radius: 4px;
-}
-
-.fancy-anchor:hover:after {
-  top: 0%;
-  opacity: 0.25;
+    
+  box-shadow:
+    inset 0 0em transparent,
+    inset 0 -1.1em var(--color-link-highlight);
 }
 
 /* heading anchor tags */
